--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "rimuru-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "18.11.13",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
-    "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  }
+	"name": "rimuru-next",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev ",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.8.0",
+		"eslint": "8.29.0",
+		"html5-qrcode": "^2.3.4",
+		"next": "13.0.6",
+		"next-auth": "^4.18.7",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "4.9.4"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.13",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.9",
+		"autoprefixer": "^10.4.13",
+		"eslint-config-next": "13.0.6",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-tailwindcss": "^0.2.1",
+		"prisma": "^4.8.0",
+		"tailwindcss": "^3.2.4"
+	}
 }
