--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@prisma/client": "^4.8.0",
+		"@prisma/client": "^4.9.0",
 		"eslint": "8.29.0",
 		"html5-qrcode": "^2.3.4",
+		"jsonwebtoken": "^9.0.0",
 		"next": "13.0.6",
 		"next-auth": "^4.18.7",
 		"react": "18.2.0",
@@ -19,6 +20,7 @@
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "18.11.13",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.9",
