--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.9.0",
+		"bcrypt": "^5.1.0",
 		"eslint": "8.29.0",
 		"html5-qrcode": "^2.3.4",
 		"jsonwebtoken": "^9.0.0",
@@ -20,6 +21,7 @@
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "18.11.13",
 		"@types/react": "18.0.26",
