--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.9.0",
-		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
 		"eslint": "8.29.0",
 		"html5-qrcode": "^2.3.4",
 		"jsonwebtoken": "^9.0.0",
