--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "rimuru-next",
-	"version": "0.1.0",
+	"version": "0.2.5",
 	"private": true,
 	"scripts": {
-		"dev": "  FAST_REFRESH=false next dev",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -11,7 +11,6 @@
 	"dependencies": {
 		"@prisma/client": "^4.9.0",
 		"bcryptjs": "^2.4.3",
-		"eslint": "8.29.0",
 		"html5-qrcode": "^2.3.4",
 		"jsonwebtoken": "^9.0.0",
 		"next": "13.0.6",
@@ -21,6 +20,7 @@
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
+		"eslint": "8.29.0",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "18.11.13",
