--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,17 @@
 			{
 				"name": "next"
 			}
-		]
+		],
+		"paths": {
+			"@components/*": ["./app/components/*"]
+		}
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"types/next-auth.d.ts "
+	],
 	"exclude": ["node_modules"]
 }
