authentication and blocking complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
 			}
 		],
 		"paths": {
-			"@components/*": ["./app/components/*"]
+			"@components/*": ["./app/components/*"],
+			"@api/*": ["./pages/api/*"]
 		}
 	},
 	"include": [
