--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.2.5",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "FAST_REFRESH=false next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
