--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.9.0",
+		"axios": "^1.3.2",
 		"bcryptjs": "^2.4.3",
 		"html5-qrcode": "^2.3.4",
 		"jsonwebtoken": "^9.0.0",
