--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.0",
+		"sweetalert2": "^11.7.1",
 		"swr": "^2.0.3",
 		"typescript": "4.9.4"
 	},
