added type safety on /product/add

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "semi": false,
-  "useTabs": true,
-  "printWidth": 90,
-  "plugins": [
-    "prettier-plugin-tailwindcss" 
-  ]
+	"semi": false,
+	"useTabs": true,
+	"printWidth": 90,
+	"plugins": ["prettier-plugin-tailwindcss"]
 }
