--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 		"dev-secure": "npx local-ssl-proxy --key ./cert/key.pem --cert ./cert/cert.pem --source 5000 --target 3000 "
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.3.0",
+		"@fortawesome/free-regular-svg-icons": "^6.3.0",
+		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@prisma/client": "^4.9.0",
 		"axios": "^1.3.2",
 		"bcryptjs": "^2.4.3",
 		"html5-qrcode": "^2.3.4",
-		"jsonwebtoken": "^9.0.0",
 		"next": "^13.1.6",
 		"next-auth": "^4.19.2",
+		"next-pwa": "^5.6.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.43.0",
