--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,32 +1,32 @@
 {
-    "theme_color": "#0f172a",
-    "background_color": "#0f172a",
-    "display": "fullscreen",
-    "scope": "/",
-    "start_url": "/store/dashboard",
-    "description": "A point of sales system",
-    "short_name": "\u773c\u93e1",
-    "name": "Megane",
-    "icons": [
-        {
-            "src": "/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-256x256.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+	"theme_color": "#0f172a",
+	"background_color": "#0f172a",
+	"display": "fullscreen",
+	"scope": "/",
+	"start_url": "/store/dashboard",
+	"description": "A point of sales system",
+	"short_name": "Megane",
+	"name": "Megane",
+	"icons": [
+		{
+			"src": "/icon-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "/icon-256x256.png",
+			"sizes": "256x256",
+			"type": "image/png"
+		},
+		{
+			"src": "/icon-384x384.png",
+			"sizes": "384x384",
+			"type": "image/png"
+		},
+		{
+			"src": "/icon-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png"
+		}
+	]
 }
